# python-ip-class-projects

./: .gitignore  LICENSE  README.md  pyproject.toml
data/proj2_data/: Testimage6.tif
data/proj5_data/: kling_20260706_VIDEO_shot_1_2s__5446_0.avi
proj1-daynight-classifier/: conftest.py  daynight_classifier.py  daynight_io.py  daynight_main.py  daynight_viz.py
proj1-daynight-classifier/tests/: test_daynight_classifier.py  test_daynight_io.py  test_daynight_main.py  test_daynight_viz.py
proj2-card-align/: Card_Alignment_Flowchart.pptx  card_align_main.py  card_data_loader.py  card_rotation.py  conftest.py
proj2-card-align/tests/: test_card_align_main.py  test_card_data_loader.py  test_card_rotation.py
proj3-multi-card-classifier/cardclassifier/: __init__.py  augment.py  binarize.py  dataset.py  edges.py  enhance.py  filters.py  hog.py  io_utils.py  morphology.py  pipeline.py  rank_classifier.py  regionprops.py  rotation.py  segmentation.py  shape_features.py  suit_classifier.py  training.py
proj3-multi-card-classifier/models/: rank.pkl  suit_thresholds.json
proj3-multi-card-classifier/scripts/: choose_suit_thresholds.py  evaluate_labeled.py  run_pipeline.py  train_classifier.py
proj3-multi-card-classifier/tests/: conftest.py  test_binarize.py  test_classifiers.py  test_dataset.py  test_features.py  test_geometry.py  test_morphology.py  test_pipeline_integration.py
proj4-fourier-filtering/results/: Proj4_pattern.tif  Proj4_uniform.tif
proj4-fourier-filtering/scripts/: proj4_main.py
proj4-fourier-filtering/tests/: conftest.py  test_dataio.py  (+2 more)
(+36 files in other folders)
